--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Covid-19</title>
 	<!-- link stylesheet file -->
 	<link rel="stylesheet" href="./stylesheets/indexStyle.css">
+	<meta name="google-site-verification" content="szCQ7h1b8rQDnu7bKAi-ZOilBM_bu94U2j2HuNO78ZY" />
 </head>
 
 <body>
